Add city-based pharmacy data handling and APIs integration
Introduced models for City and WorkingSchedule to manage city-specific pharmacy data and working hours. Enhanced APIs to fetch pharmacies based on cities, updated views and URLs for city-based data handling, and integrated Google Maps API for live data retrieval. Adjusted templates and settings for improved flexibility and scalability.

--- a/pharmacies/templates/pharmacies/index.html
+++ b/pharmacies/templates/pharmacies/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 <h1>Google Maps with HTMX</h1>
-<div id="mapDiv" hx-get="/load_map_data" hx-trigger="load" hidden=""></div>
+<div id="mapDiv" hx-get="/load_map_data/eskisehir" hx-trigger="load" hidden=""></div>
 <div id="map"></div>
 
 <script>
@@ -144,6 +144,8 @@
 
     // Main map handler
     document.addEventListener("htmx:afterOnLoad", (event) => {
+
+
         if (event.detail.elt.id === "mapDiv") {
             const data = JSON.parse(event.detail.xhr.responseText);
             const { center, points } = data;
