--- a/pharmacies/templates/pharmacies/index.html
+++ b/pharmacies/templates/pharmacies/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>HTMX Google Maps</title>
+  <link rel="icon" href="/static/favicon.ico" type="image/x-icon">
+  <title>Pharmacy On Duty</title>
   <script src="https://unpkg.com/htmx.org"></script>
   <script src="/google_maps_proxy"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -131,7 +132,7 @@
                         <span class="status ${pharmacy.is_open ? 'open' : 'closed'}">
                             ${pharmacy.is_open ? 'Open' : 'Closed'}
                         </span>
-                        <a href="https://www.google.com/maps/dir/?api=1&destination=${pharmacy.position.lat},${pharmacy.position.lng}" class="directions" target="_blank">Directions</a>
+                        <a href="https://www.google.com/maps/dir/?api=1&destination=${pharmacy.position.lat},${pharmacy.position.lng}"class="directions" target="_blank">Directions</a>
                     </div>
                 `);
             });
@@ -205,7 +206,7 @@
                 },
                 {
                     enableHighAccuracy: true,
-                    timeout: 10000,
+                    timeout: 100000,
                     maximumAge: 30000,
                 }
             );
