chore: update index.html title to 'En Yakın Açık Eczane'

--- a/pharmacies/templates/pharmacies/index.html
+++ b/pharmacies/templates/pharmacies/index.html
@@ -88,7 +88,7 @@
   </style>
 </head>
 <body>
-<h1>Google Maps with HTMX</h1>
+<h1>En Yakın Açık Eczane</h1>
 <div id="map"></div>
 
 <div class="pharmacy-list">
