--- a/theme/templates/pharmacies.html
+++ b/theme/templates/pharmacies.html
@@ -23,7 +23,7 @@
 
 <body class="bg-gray-50 text-gray-900 min-h-screen flex flex-col">
 
-	<header class="px-6 py-4 flex items-center gap-4 border-b bg-primary-100 relative z-10">
+	<header class="px-6 py-4 flex items-center gap-4 bg-primary-100 relative z-10 shadow-slate-600 shadow-md">
 		<div class="w-12 h-12 bg-blue-100 rounded-full flex items-center justify-center shadow-lg relative z-20">
 			<img src="static/icons/eczane-logo-circled.svg" alt="Pharmacy Icon" class="w-16 h-16">
 		</div>
@@ -31,25 +31,17 @@
 	</header>
 	
 	<!-- Map Section -->
-	<main class="flex-1 relative bg-gray-50">
-		<div id="map" class="w-full h-64 md:h-96"></div>
+	<main class="flex-1 flex flex-col bg-gray-50">
+		<div id="map" class="flex-1 w-full h-[calc(100vh-200px)]"></div>
+		
+		<!-- Pharmacy List Container -->
+		<div class="p-4 bg-primary-100 shadow-lg rounded-t-xl mt-[-2rem] relative z-20">
+			<h2 class="text-xl font-semibold mb-4">Nearest Pharmacies</h2>
+			<div id="pharmacy-items" class="space-y-4">
+				<!-- Pharmacy items will be dynamically inserted here by updatePharmacyList -->
+			</div>
+		</div>
 	</main>
-
-	<!-- Pharmacy List Container -->
-	<div class="p-4 bg-primary-100">
-		<h2 class="text-xl font-semibold mb-4">Nearest Pharmacies</h2>
-		<div id="pharmacy-items" class="space-y-4">
-			<!-- Pharmacy items will be dynamically inserted here by updatePharmacyList -->
-		</div>
-	</div>
-
-	<!-- Pharmacy List Container -->
-	<div class="p-4 bg-primary-100">
-		<h2 class="text-xl font-semibold mb-4">Nearest Pharmacies</h2>
-		<div id="pharmacy-items" class="space-y-4">
-			<!-- Pharmacy items will be dynamically inserted here by updatePharmacyList -->
-		</div>
-	</div>
 
 	<!-- Your existing scripts and logic -->
 	<script>
