--- a/theme/templates/pharmacies.html
+++ b/theme/templates/pharmacies.html
@@ -24,16 +24,13 @@
 
 
 	<!-- Map Section -->
-	<main class="flex-1 flex flex-col bg-gray-50 items-center">
-		<div class="h-24 px-6 py-4 w-32 m-16 flex items-center gap-4 bg-primary-100 rounded-l relative z-10 border-b border-neutral-400"
+	<main class="flex-1 flex flex-col bg-gray-50">
+		<div class="h-16 w-16 mt-6 ml-6 flex items-center bg-primary-100 rounded-l relative z-10 border-b border-neutral-400"
 			style="box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);">
-			<div class="w-12 h-12 flex items-center justify-center shadow-lg relative z-20">
-				<img src="static/icons/eczane-logo.png" alt="Pharmacy Icon" class="w-16 h-16">
-			</div>
+				<img src="static/icons/eczane-logo.png" alt="Pharmacy Icon">
 		</div>
 
-
-		<div id="map" class="fixed top-[calc(-14rem)] left-0 right-0 h-[calc(100vh-12rem)] w-full"></div>
+		<div id="map" class="fixed top-[calc(-14rem)] left-0 right-0 h-[calc(100vh-3rem)] w-full"></div>
 
 		<!-- Pharmacy List Container -->
 		<div id="pharmacy-list-container"
