--- a/theme/templates/pharmacies.html
+++ b/theme/templates/pharmacies.html
@@ -57,6 +57,17 @@
 			map = new google.maps.Map(document.getElementById("map"), {
 				center: center,
 				zoom: 10,
+				// Disable all default UI controls
+				disableDefaultUI: true,
+				// Optional: Disable zoom/pan gestures
+				{% comment %} gestureHandling: "none", {% endcomment %}
+				// Optional: Disable remaining individual controls
+				zoomControl: false,
+				mapTypeControl: false,
+				scaleControl: false,
+				streetViewControl: false,
+				rotateControl: false,
+				fullscreenControl: false,
 			});
 			directionsService = new google.maps.DirectionsService();
 			directionsRenderer = new google.maps.DirectionsRenderer();
