feat: adjust pharmacy list container position and max height for improved visibility

--- a/theme/templates/pharmacies.html
+++ b/theme/templates/pharmacies.html
@@ -255,8 +255,9 @@
 		left: 0;
 		right: 0;
 		transition: transform 0.3s ease-in-out;
-		transform: translateY(73%);
+		transform: translateY(50vh);
 		will-change: transform;
+		max-height: 80vh;
 	}
 
 	#handle {
@@ -273,7 +274,7 @@
 	}
 
 	#pharmacy-list-container.collapsed {
-		transform: translateY(73%);
+		transform: translateY(50vh);
 	}
 
 	html {
