feat: enhance pharmacy data with address and distance, update styles and improve header text

--- a/theme/templates/pharmacies.html
+++ b/theme/templates/pharmacies.html
@@ -37,7 +37,7 @@
 			class="p-4 bg-primary-100 shadow-slate-600 shadow-lg rounded-t-3xl relative z-20 border-t border-neutral-400"
 			style="box-shadow: 0 -4px 20px rgba(0, 0, 0, 0.5);">
 			<div id="handle" class="w-12 h-1 bg-gray-400 rounded-full mx-auto mb-2"></div>
-			<h2 class="text-center text-xl font-semibold mb-4 mt-6">En Yakın Eczaneler</h2>
+			<h2 class="text-xl font-bold mb-4 mt-4">En Yakın Eczanerede</h2>
 			<div id="pharmacy-items" class="space-y-4">
 				<!-- Pharmacy items will be dynamically inserted here -->
 			</div>
