feat: add utility classes for margin, height, and width adjustments in CSS

--- a/theme/templates/pharmacies.html
+++ b/theme/templates/pharmacies.html
@@ -25,7 +25,7 @@
 
 	<!-- Map Section -->
 	<main class="flex-1 flex flex-col bg-gray-50">
-		<div class="h-16 w-16 mt-6 ml-6 flex items-center bg-primary-100 rounded-l relative z-10 border-b border-neutral-400"
+		<div class="h-14 w-14 m-5 flex items-center bg-primary-100 rounded-l relative z-10 border-b border-neutral-400"
 			style="box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);">
 				<img src="static/icons/eczane-logo.png" alt="Pharmacy Icon">
 		</div>
