--- a/theme/templates/pharmacies.html
+++ b/theme/templates/pharmacies.html
@@ -34,14 +34,17 @@
 
 		<!-- Pharmacy List Container -->
 		<div id="pharmacy-list-container"
-			class="p-4 bg-primary-100 shadow-slate-600 shadow-lg rounded-t-3xl relative z-20 border-t border-neutral-400"
-			style="box-shadow: 0 -4px 20px rgba(0, 0, 0, 0.5);">
-			<div id="handle" class="w-12 h-1 bg-gray-400 rounded-full mx-auto mb-2"></div>
-			<h2 class="text-xl font-bold mb-4 mt-4">En Yakın Eczanerede</h2>
+		class="p-4 bg-primary-100 shadow-slate-600 shadow-lg rounded-t-3xl relative z-20 border-t border-neutral-400 flex flex-col"
+		style="box-shadow: 0 -4px 20px rgba(0, 0, 0, 0.5);">
+		<div id="handle" class="w-12 h-1 bg-gray-400 rounded-full mx-auto mb-2"></div>
+		<h2 class="text-xl font-bold mb-4 mt-4">En Yakın Eczanerede</h2>
+		<!-- Scrollable Area -->
+		<div class="flex-1 overflow-y-auto">
 			<div id="pharmacy-items" class="space-y-4">
 				<!-- Pharmacy items will be dynamically inserted here -->
 			</div>
 		</div>
+	</div>
 
 	</main>
 
