feat: add Google Ads script to pharmacies template for monetization

--- a/theme/templates/pharmacies.html
+++ b/theme/templates/pharmacies.html
@@ -17,6 +17,9 @@
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 	<!-- Hammer.js (CDN) -->
 	<script src="https://hammerjs.github.io/dist/hammer.min.js"></script>
+
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2058777526611837"
+		crossorigin="anonymous"></script>
 </head>
 
 <body class="bg-gray-50 text-gray-900 min-h-screen flex flex-col">
