feat: integrate Google Ads into pharmacies template for enhanced monetization

--- a/theme/templates/pharmacies.html
+++ b/theme/templates/pharmacies.html
@@ -57,6 +57,18 @@
 			<h2 class="text-xl font-bold mb-4 mt-4">Eskişehir'deki Açık Eczaneler</h2>
 			<!-- Scrollable Area -->
 			<div id="pharmacy-scrollable-area" class="flex-1 scrollable-area">
+				<div class="pharmacy-item bg-primary-100 shadow-sm rounded p-4 flex flex-col
+					<script async
+						src=" https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2058777526611837"
+					crossorigin="anonymous">
+					</script>
+					<!-- pharmacy-list-ad -->
+					<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-2058777526611837"
+						data-ad-slot="6228792612" data-ad-format="auto" data-full-width-responsive="true"></ins>
+					<script>
+						(adsbygoogle = window.adsbygoogle || []).push({});
+					</script>
+				</div>
 				<div id="pharmacy-items" class="space-y-4">
 					<!-- Pharmacy items will be dynamically inserted here -->
 				</div>
@@ -149,18 +161,7 @@
 			const adHtml = `
 				<div class="pharmacy-item bg-primary-100 shadow-sm rounded p-4 flex flex-col
 								md:flex-row items-start md:items-center justify-between">
-					<div class="md:flex-grow">
-						<p class="text-lg font-semibold mb-1">Reklam</p>
-						<p class="text-sm text-gray-600">
-							Adsız reklam
-						</p>
-					</div>
-					<div class="mt-2 md:mt-0 flex items-center space-x-3">
-						<span class="inline-block text-sm font-medium px-6 py-2 rounded
-									bg-secondary border-2 border-secondary text-white">
-							Açık
-						</span>
-					</div>
+
 				</div>
 			`;
 			// pharmacyItems.append(adHtml);
