refactor: improve get_nearest_pharmacies_on_duty to remove clutter from the view

--- a/theme/templates/pharmacies.html
+++ b/theme/templates/pharmacies.html
@@ -238,7 +238,9 @@
 					callback(response);
 				},
 				error: function (error) {
-					console.error("Error fetching pharmacy points:", error);
+					console.error("Error fetching pharmacy points:", error.responseJSON.error);
+					console.warn(error.responseJSON.traceback);
+
 				}
 			});
 		}
