--- a/theme/templates/pharmacies.html
+++ b/theme/templates/pharmacies.html
@@ -146,7 +146,7 @@
 						<div class="md:flex-grow">
 						<p class="text-lg font-semibold mb-1">${pharmacy.title}</p>
 						<p class="text-sm text-gray-600">
-							${pharmacy.address} (${pharmacy.distance} metre uzaklıkta)
+							${pharmacy.address} <br /> (${pharmacy.travel_distance} metre uzaklıkta)
 						</p>
 						</div>
 						<div class="mt-2 md:mt-0 flex items-center space-x-3">
