feat: add favicon to pharmacies template for improved branding

--- a/theme/templates/pharmacies.html
+++ b/theme/templates/pharmacies.html
@@ -3,6 +3,7 @@
 <html lang="tr">
 
 <head>
+	<link rel="icon" href="static/favicon.ico" type="image/x-icon">
 	<title>Nöbetçi Eczaneler | Açık Eczaneler | Eczanerede</title>
 	<meta name="description" content="Keşfedin: Eskişehir’deki, İstanbul'daki ve Ankara'daki size en yakın açık ve nöbetçi eczaneler. Hızlı yol tarifi ve konum bilgileriyle, ihtiyacınız olduğunda en yakın eczaneye kolayca ulaşın.">	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -11,8 +12,8 @@
 	<meta property="og:description" content="Eskişehir’deki, İstanbul'daki ve Ankara'daki size en yakın açık ve nöbetçi eczaneler. Hızlı yol tarifi ve konum bilgileriyle, ihtiyacınız olduğunda en yakın eczaneye kolayca ulaşın.">
 	<meta property="og:image" content="https://images.seeklogo.com/logo-png/53/1/eczane-logo-png_seeklogo-536923.png">
 	<meta property="og:url" content="https://eczanerede.com">
+	
 
-<meta name="twitter:card" content="summary_large_image">
 	{% tailwind_css %}
 
 	<!-- htmx -->
