style: update footer text size for improved readability in pharmacies template

--- a/theme/templates/pharmacies.html
+++ b/theme/templates/pharmacies.html
@@ -75,7 +75,7 @@
 			</div>
 
 			<footer class="bg-gray-100 p-4 text-center">
-				<p>
+				<p class="text-sm">
 				  &copy; 2025 Eczanerede | 
 				  <a href="/privacy-policy/" class="text-blue-600">Gizlilik Politikası</a> | 
 				  <a href="/terms/" class="text-blue-600">Hizmet Şartları</a> | 
